# psi-project

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
psi_project/: __init__.py  __main__.py
psi_project/cli/: __init__.py  cli.py  command_executor.py  commands.py
psi_project/core/: config.py  message.py  utils.py
psi_project/message/: __init__.py  message.py
psi_project/repo/: file_manager.py
psi_project/tcp/: Receiver.py  Sender.py  Server.py  __init__.py  tcp_server.py
psi_project/udp/: UdpServer.py  Udp_Client.py  Udp_Server.py  __init__.py  message.py  udp.py  udp_client.py  udp_server.py
